<resources>
    <string name="app_name">SilentCircle</string>

    <string name="Inbox">Inbox</string>
    <string name="Friends">Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_menu_logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="Sign_Up_Text">Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="First_Name_Hint">First_Name</string>
    <string name="Last_Name_Hint">Last Name</string>
    <string name="Email_Hint">Email Address</string>
    <string name="Username_Hint">Username</string>
    <string name="signup_error_message">Please make sure you have entered all fields: First Name, Last Name, Username, Password, and Email Address.</string>
    <string name="signup_error_title">Oops!</string>
    <string name="error_title">Sorry, an error has occurred!</string>
    <string name="login_error_message">Please make sure you enter a username and password.</string>
    <string name="login_error_title">Oops!</string>
    <string name="empty_inbox_label">No new messages. . .</string>
    <string name="empty_friend_label">Friendless. . .</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>
    <string name="main_menu_edit_friends_label">Edit Friends</string>
    <string name="main_menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="general_error_message">Sorry, there was an error!</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
</resources>
