<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/main_menu_camera"
          android:title="@string/main_menu_camera_label"
          android:orderInCategory="1"
          app:showAsAction="always"
        android:icon="@drawable/ic_camera_white_48dp"/>
    <item android:id="@+id/main_menu_edit_friends"
            android:title="@string/main_menu_edit_friends_label"
            android:orderInCategory="1"
            app:showAsAction="never"/>
    <item android:id="@+id/main_menu_logout"
          android:title="@string/main_menu_logout"
          android:orderInCategory="2"
          app:showAsAction="never"/>
</menu>
